Add dynamic configuration for using DynamoDB in AccountsDatabaseCrawler